<resources>
    <string name="app_name">OTP</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="verify">Verifying your number!</string>
    <string name="sent">We have sent an OTP on your number</string>
    <string name="resend">Resend OTP?</string>
    <string name="need">We need to text you the OTP to</string>
    <string name="auth">authenticate your account</string>
    <string name="phone">Your mobile number</string>
    <string name="number">+91-4445556987</string>
    <string name="ok">OK</string>
</resources>
