<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.example.a.otp.MainActivity">

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.75"
        android:id="@+id/vpager"/>

    <me.relex.circleindicator.CircleIndicator
        android:id="@+id/indicator"
        android:layout_width="match_parent"
        app:ci_drawable="@drawable/whitecircle"
        app:ci_drawable_unselected="@drawable/greycircle"
        app:ci_width="7dp"
        app:ci_height="7dp"
        android:background="@drawable/gradient3"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.75"
        android:orientation="vertical"
        android:weightSum="4"
        android:background="@drawable/gfradient">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3"
            android:orientation="horizontal">

            <customfonts.MyTextView_Roboto_Medium
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/txtone"
                android:text="@string/one"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:gravity="center"/>
            <customfonts.MyTextView_Roboto_Medium
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/txttwo"
                android:text="@string/two"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:gravity="center"/>
            <customfonts.MyTextView_Roboto_Medium
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/txtthree"
                android:text="@string/three"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:gravity="center"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3"
            android:orientation="horizontal">

            <customfonts.MyTextView_Roboto_Medium
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/txtfour"
                android:text="@string/four"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:gravity="center"/>
            <customfonts.MyTextView_Roboto_Medium
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/txtfive"
                android:text="@string/five"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:gravity="center"/>
            <customfonts.MyTextView_Roboto_Medium
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/txtsix"
                android:text="@string/six"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:gravity="center"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3"
            android:orientation="horizontal">

            <customfonts.MyTextView_Roboto_Medium
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/txtseven"
                android:text="@string/seven"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:gravity="center"/>
            <customfonts.MyTextView_Roboto_Medium
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/txteight"
                android:text="@string/eight"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:gravity="center"/>
            <customfonts.MyTextView_Roboto_Medium
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/txtnine"
                android:text="@string/nine"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:gravity="center"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3"
            android:orientation="horizontal"
            android:gravity="center">


            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_keyboard_backspace"
                android:padding="25dp"/>

            <customfonts.MyTextView_Roboto_Medium
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/txtzero"
                android:text="@string/zero"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:gravity="center"/>

            <customfonts.MyTextView_Roboto_Medium
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/txtok"
                android:text="@string/ok"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:gravity="center"/>



        </LinearLayout>






    </LinearLayout>


</LinearLayout>
